# copa-ia

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/pages/: 1_predictions.py
score-predictor/: README.md  run_pipeline.py
score-predictor/data/processed/: matches_clean.parquet
score-predictor/outputs/models/: elo_ratings.json
score-predictor/src/: __init__.py
score-predictor/src/data/: downloader.py  live_updater.py  preprocessor.py  team_names.py
score-predictor/src/models/: dixon_coles.py  elo.py  ensemble.py  evaluator.py
score-predictor/src/reporting/: generator.py
score-predictor/tests/: test_models.py
src/: __init__.py
src/data/: ingestion.py
src/features/: form_features.py  h2h_features.py  pipeline.py  ranking_features.py
src/models/: baseline.py  ml_ensemble.py
src/rl/: tactical_env.py
src/simulation/: monte_carlo.py
tests/: test_models.py  test_rl_env.py  test_simulation.py
