[project]
name = "copa-ia"
version = "0.1.0"
description = "CopIA — Inteligência Artificial aplicada à Copa do Mundo 2026"
authors = [{ name = "Ahirton Lopes", email = "ahirtonlopes@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # ML / Stats
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",

    # Deep Learning
    "torch>=2.2.0",

    # Explainability (instalação opcional — ver extras)
    # "shap>=0.44.0",  # instalar com: uv add shap

    # LLM / Agents
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "google-generativeai>=0.5.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    "chromadb>=0.5.0,<1.0.0",

    # RL
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",

    # Visualization / Dashboard
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Football data (statsbombpy via requests direta — evita dep numba antiga)
    "requests>=2.31.0",

    # MLOps
    "mlflow>=2.13.0",

    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.uv]
# Forçar versão do onnxruntime compatível com macOS 13 arm64
constraint-dependencies = [
    "onnxruntime<1.20.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
